# march-madness-llm

./: .gitattributes  .gitignore  .infisical.json  AGENTS.md  README.md  VISION.md  bracket.py  bracket_2024.json  bracket_data.json  bracket_old.py  current_state.json  debug.py  deciders.py  docker-compose.yml  grok_bracket_design.txt  hm.py  main.py  pyproject.toml  requirements.txt
.agents/: HANDOFF.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: bracket.py  deciders.py  main.py  simulator.py
backend/data/: bracket_2024.json
backend/mm_ai/: bracket.py  deciders.py  main.py  minio_client.py  simulator.py
backend/tests/: conftest.py  test_bracket.py  test_deciders.py  test_main.py  test_simulator.py
frontend/: .dockerignore  Dockerfile  README.md  config-overrides.js  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: simulation.spec.ts  visual.spec.ts
frontend/e2e/fixtures/: bracket.ts
frontend/public/: index.html
frontend/public/logos/: team_ids.csv
frontend/src/: App.css  App.js  App.tsx  api.js  api.ts  index.js  team_mappings.ts  team_name_mappings.ts
frontend/src/components/: BracketDisplay.js  BracketDisplayNew.js  BracketryTest.tsx  MatchupCard.js  MatchupCard.tsx  SimulateButton.js  SimulateButton.tsx  SimulationStatus.js  SimulationStatus.tsx  TeamLogo.tsx
frontend/src/types/: bracket.ts
scripts/: translate_teams.py
