[tool.poetry]
name = "march-madness-llm"
version = "0.1.0"
description = "for fun"
authors = ["David Rose <david@drose.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.14.2"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true