[tool.poetry]
name = "march-madness-llm"
version = "0.1.0"
description = "for fun"
authors = ["David Rose <david@drose.io>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.14.2"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.1"
langsmith = "^0.1.40"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
pre-commit = "^3.7.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true